@@ -86,6 +86,22 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|common
+operator|.
+name|util
+operator|.
+name|NamedList
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|request
 operator|.
 name|SolrQueryRequest
@@ -142,20 +158,6 @@ begin_import
 import|import
 name|org
 operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|util
-operator|.
-name|SolrPluginUtils
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
 name|slf4j
 operator|.
 name|Logger
@@ -195,11 +197,73 @@ name|LoggerFactory
 operator|.
 name|getLogger
 argument_list|(
-name|XmlUpdateRequestHandler
+name|ContentStreamHandlerBase
 operator|.
 name|class
 argument_list|)
 decl_stmt|;
+annotation|@
+name|Override
+DECL|method|init
+specifier|public
+name|void
+name|init
+parameter_list|(
+name|NamedList
+name|args
+parameter_list|)
+block|{
+name|super
+operator|.
+name|init
+argument_list|(
+name|args
+argument_list|)
+expr_stmt|;
+comment|// Caching off by default
+name|httpCaching
+operator|=
+literal|false
+expr_stmt|;
+if|if
+condition|(
+name|args
+operator|!=
+literal|null
+condition|)
+block|{
+name|Object
+name|caching
+init|=
+name|initArgs
+operator|.
+name|get
+argument_list|(
+literal|"httpCaching"
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|caching
+operator|!=
+literal|null
+condition|)
+block|{
+name|httpCaching
+operator|=
+name|Boolean
+operator|.
+name|parseBoolean
+argument_list|(
+name|caching
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
 annotation|@
 name|Override
 DECL|method|handleRequestBody
